--- a/config.cfg
+++ b/config.cfg
@@ -6,21 +6,21 @@
 #################################################
 
 # Main scripts directory:
-dir=/home/franchini/Satellite/code
+dir=/home/wxsat/Satellite/code
 
 # Output directory for audios and images:
-output=/home/franchini/Satellite/code
+output=/home/wxsat/Satellite
 
 # Location:
-where=$dir/ravenna.qth #acton.qth #frilsham.qth
+where=$dir/dunmow.qth #acton.qth #frilsham.qth
 
 # Softwares:
-predict=/home/franchini/Satellite/predict/predict
-wxdir=/home/franchini/Satellite/wxtoimg/usr/local/bin/
-demod=/home/franchini/Satellite/meteor_demod/src/meteor_demod
+predict=/usr/local/bin/predict
+wxdir=/usr/local/bin/
+demod=/usr/local/bin/meteor_demod
 #demod=/home/franchini/Satellite/meteor_demod_devel/src/meteor_demod
-decoder=/home/franchini/Satellite/meteor_decoder/medet
-rectify=/home/franchini/Satellite/rectify-jpeg-0.3/rectify-jpg
+decoder=/usr/local/bin/medet
+rectify=/usr/local/bin/rectify-jpg
 
 # Miminum elevation to record a passage [deg]:
 min_el=20
