--- a/config.cfg
+++ b/config.cfg
@@ -22,6 +22,9 @@ demod=/usr/local/bin/meteor_demod
 decoder=/usr/local/bin/medet
 rectify=/usr/local/bin/rectify-jpg
 
+# RTL device id
+device=1
+
 # Miminum elevation to record a passage [deg]:
 min_el=20
 
